# SwastonConsole

./: CMakeLists.txt  README.md  Source.cpp  main.cpp  swaston_generator.cpp  utf8_tools.cpp  utf8_tools.h
include/: swaston_generator.h  utf8_tools.h
include/utf8/: checked.h
